# LCEL_langchain_playground

./: lcel_playground.ipynb  pyproject.toml
