[tool.poetry]
name = "lcel-langchain-playground"
version = "0.1.0"
description = ""
authors = ["Alex <alecgg27895@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.8"
langchain-community = "^0.2.1"
docarray = "^0.40.0"
tiktoken = "^0.7.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
